[package]
name = "tutor-db"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.1.0"
actix-rt = "2.7.0"
sqlx = {version = "0.6.2", default_features = false, features = ["postgres","runtime-tokio-native-tls", "macros","chrono"]}
dotenv = "0.15.0"
openssl = { version = "0.10.41", features = ["vendored"] }
serde = { version = "1.0.110", features = ["derive"] }
chrono = {version = "0.4.11", features = ["serde"]}

[[bin]]
name="iter1"

